--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
-  <!-- MailerLite Universal (keep only one copy site-wide) -->
+  <!-- MailerLite Universal -->
   <script>
     (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments);},
     l=d.createElement(e),l.async=1,l.src=u,
     n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
     (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
-    ml('account', '1728208'); /* replace if your account id differs */
+    ml('account', '1728208');
   </script>
   <!-- End MailerLite Universal -->
 </head>
@@ -53,19 +53,17 @@
         <!-- RIGHT TOP: image -->
         <div class="hero-image">
           <figure class="image-card">
-            <!-- replace src with your own image if you like -->
-            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=1600&auto=format&fit=crop"
+            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=1600&auto=format&fit=crop"
                  alt="Glow with confidence" />
             <figcaption>Glow with confidence ✨</figcaption>
           </figure>
         </div>
 
-        <!-- RIGHT BOTTOM: CTA (form under image) -->
+        <!-- RIGHT BOTTOM: CTA -->
         <div class="hero-cta">
           <div class="cta-card">
             <h2>Get the Free Guide</h2>
             <p>Pop in your email and we’ll send it right away.</p>
-            <!-- MailerLite form -->
             <div class="ml-embedded" data-form="XE8T1M"></div>
             <p class="privacy">We respect your privacy. Unsubscribe anytime.</p>
           </div>
@@ -73,7 +71,7 @@
       </div>
     </section>
 
-    <!-- WHAT YOU'LL GET -->
+    <!-- FEATURES -->
     <section class="features">
       <div class="container">
         <h3 class="section-title">What You'll Get</h3>
