--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main>
     <!-- HERO -->
     <section class="hero">
-      <div class="container hero-grid">
+      <div class="container hero-flex">
         <!-- LEFT: copy -->
         <div class="hero-copy">
           <p class="eyebrow">Free guide</p>
@@ -50,22 +50,23 @@
           </ul>
         </div>
 
-        <!-- RIGHT TOP: image -->
-        <div class="hero-image">
-          <figure class="image-card">
-            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=1600&auto=format&fit=crop"
-                 alt="Glow with confidence" />
-            <figcaption>Glow with confidence ✨</figcaption>
-          </figure>
-        </div>
+        <!-- RIGHT: image + form side by side -->
+        <div class="hero-right">
+          <div class="hero-image">
+            <figure class="image-card">
+              <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=1600&auto=format&fit=crop"
+                   alt="Glow with confidence" />
+              <figcaption>Glow with confidence ✨</figcaption>
+            </figure>
+          </div>
 
-        <!-- RIGHT BOTTOM: CTA -->
-        <div class="hero-cta">
-          <div class="cta-card">
-            <h2>Get the Free Guide</h2>
-            <p>Pop in your email and we’ll send it right away.</p>
-            <div class="ml-embedded" data-form="XE8T1M"></div>
-            <p class="privacy">We respect your privacy. Unsubscribe anytime.</p>
+          <div class="hero-cta">
+            <div class="cta-card">
+              <h2>Get the Free Guide</h2>
+              <p>Pop in your email and we’ll send it right away.</p>
+              <div class="ml-embedded" data-form="XE8T1M"></div>
+              <p class="privacy">We respect your privacy. Unsubscribe anytime.</p>
+            </div>
           </div>
         </div>
       </div>
